--- a/html/index.html
+++ b/html/index.html
@@ -236,16 +236,6 @@
         <img src="../img/seta-cima.png" alt="Seta para cima" title="Voltar ao topo"></a>
     </div>
     </div>  
-    <script>
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-      e.preventDefault();
-  
-      document.querySelector(this.getAttribute('href')).scrollIntoView({
-        behavior: 'smooth'
-      });
-    });
-  });
-    </script>     
+    <script src="../JS/index.js"></script>     
 </body>
 </html>
