--- a/html/projetos.html
+++ b/html/projetos.html
@@ -33,6 +33,13 @@
                             </div>
                         </div>
                         <div class="slider">
+                            <a href="FormValidator.html" target="_blank"><img src="../img/Captura4.png" alt="Form Validator"></a>
+                            <div class="describe">
+                                <h3>Form Validator</h3>
+                                <p>Formulario com validações utilizando js e jquery</p>
+                            </div>
+                        </div>
+                        <div class="slider">
                             <a href="relogio.html" target="_blank"><img src="../img/Captura2.png" alt="Relógio Digital"></a>
                             <div class="describe">
                                 <h3>Relógio Digital</h3>
