--- a/html/contato.html
+++ b/html/contato.html
@@ -24,7 +24,7 @@
                 <h3>Contato</h3>
                 <div class="icons">
                     <div class="icon">
-                        <a href="projetos.html">
+                        <a href="https://github.com/MotaVinicius">
                             <img src="../img/icons8-github-48.png" alt="GitHub"></a>
                             <small>Github</small>
                     </div>
