Atualização one page

--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#mid-header">Sobre mim</a></li>
                 <li><a href="#boxes">Conhecimentos</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
         <div id="main">
@@ -39,36 +39,24 @@
             <div id="container-mid">
                 <div id="Sobremim">
                     <h2>Sobre Mim</h2>
-                    <p>Olá, me chamo Vinicius, tenho 25 anos, sou estudante de Redes de computadores, faço parte do universo da tecnologia a 4 anos e logo abaixo vocês poderão ver um pouco mais da minha tragetória </p>
+                    <p>Olá, me chamo Vinicius, tenho 25 anos, sou estudante de Redes de computadores, deixei a area de administração de empresas para entrar no universo da tecnologia a 4 anos e logo abaixo vocês poderão ver um pouco mais de como esta sendo minha tragetória</p>
                 
                 </div>
                 <div id="eventos">
                     <div id="one">
-                        <p>Curso profissionalizante de administração e estágio como auxiliar administrativo</p>
-                    </div>
-                    <div id="two">
-                        <p>Conclusão de curso e estágio</p>
-                    </div>
-                    <div id="three">
-                        <p>Ingresso Faculdade de Administração</p>
-                    </div>
-                    <div id="four">
-                        <p>Estágio auxiliar administrativo</p>
+                        <p><br> Administração</p>
                     </div>
                     <div id="five">
-                        <p>Inicio dos estudos voltados a hardware e trancamento da faculdade de administração </p>
+                        <p>Inicio dos estudos voltados a hardware por conta própria</p>
                     </div>
                     <div id="six">
                         <p>Trabalhos Freelancer com formatação, montagem e manutenção de computadores</p>
-                    </div>
-                    <div id="seven">
-                        <p>Mantendo a consistência</p>
                     </div>
                     <div id="eight">
                         <p><b>Ingresso na faculdade de Redes de computadores</b>, certificação azure, curso IT cisco</p>
                     </div>
                     <div id="nine">
-                        <p>Cursos de SQL, Python e desenvolvimento Web</p>
+                        <p>Cursos de SQL, Python, GIT e desenvolvimento Web (JS, CSS, HTML, React)</p>
                     </div>
                 </div>
                 <div id="linha">
@@ -109,18 +97,6 @@
                             <div class="legenda">06/2023</div>
                         </div>                
                         
-                    </div>
-                </div>
-                <div id="linha2">
-                    <div class="ponto-1"> 
-                        <div class="legenda">2016
-                        </div>
-                    </div>
-                    <div class="ponto"> 
-                        <div class="legenda">Trabalhando de forma dinâmica no comércio da família</div>
-                    </div>
-                    <div class="ponto-1"> 
-                        <div class="legenda">Atualmente</div>
                     </div>
                 </div>
             </div>
@@ -181,8 +157,7 @@
 
                     </div>
                 </div>
-
-            <div class="secondbox">
+                <div class="secondbox">
                 <div class="label">
                     <h3>Frameworks:</h3>
                 </div>
@@ -219,7 +194,88 @@
             </div>
             </div>
         </div> 
-    <footer>
+        <div id="projetos">
+            <div id="container-slider">
+                <div class="container-slider">
+                    <div id="header-slider">
+                        <h2>Navegue pelos projetos</h2>
+                    </div>
+                    <div id="bottom-slider">
+                        <button id="prev-bt"><img src="../img/left.png" alt="prev-button" title="Anterior"></button>
+                        <div class="carrossel">
+                            <div class="slider on">
+                                <a href="https://www.google.com.br/" target="_blank"><img src="../img/Captura.png" alt="Em Breve"></a>
+                                <div class="describe">
+                                    <h3>Blog de Tecnologia</h3>
+                                    <p>Projeto academico desenvolvido em html, css e js</p>
+                                    <div class="btns">
+                                        <button class="link">Repositório</button>
+                                        <button class="link">Visualizar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider">
+                                <a href="FormValidator.html" target="_blank"><img src="../img/Captura4.png" alt="Form Validator"></a>
+                                <div class="describe">
+                                    <h3>Form Validator</h3>
+                                    <p>Formulario com validações utilizando js e jquery</p>
+                                    <div class="btns">
+                                        <button class="link">Repositório</button>
+                                        <button class="link">Visualizar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider">
+                                <a href="relogio.html" target="_blank"><img src="../img/Captura2.png" alt="Relógio Digital"></a>
+                                <div class="describe">
+                                    <h3>Relógio Digital</h3>
+                                    <p>Desenvolvido com html, css e js</p>
+                                    <div class="btns">
+                                        <button class="link">Repositório</button>
+                                        <button class="link">Visualizar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider">
+                                <a href="calculadora.html" target="_blank"><img src="../img/Captura3.png" alt="Calculadora"></a>
+                                <div class="describe">
+                                    <h3>Calculadora</h3>
+                                    <p>Calculadora Simples com html, css e js</p>
+                                    <div class="btns">
+                                        <button class="link">Repositório</button>
+                                        <button class="link">Visualizar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider">
+                                <a href="https://www.google.com.br/" target="_blank"><img src="../img/vazio.png" alt="Em Breve"></a>
+                                <div class="describe">
+                                    <h3>Em breve</h3>
+                                    <p>...</p>
+                                    <div class="btns">
+                                        <button class="link">Repositório</button>
+                                        <button class="link">Visualizar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider">
+                                <a href="https://www.google.com.br/" target="_blank"><img src="../img/vazio.png" alt="Em Breve"></a>
+                                <div class="describe">
+                                    <h3>Em breve</h3>
+                                    <p>...</p>
+                                    <div class="btns">
+                                        <button class="link">Repositório</button>
+                                        <button class="link">Visualizar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    <button id="next-bt"><img src="../img/right.png" alt="next-button" title="Proximo"></button>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    <footer id="contato">
         <div id="creditos">
             <h4>Créditos e Atribuições</h4>
             <a href="https://storyset.com/online">Online illustrations - Storyset</a>
@@ -227,15 +283,16 @@
         <div id="contato">
             <h4>Contato</h4>
             <p>Email: Motavinicius@outlook.com</p>
-            <p>Redes Sociais: <a href="contato.html">Clique aqui</a></p>
+            <p>WhatsApp: (19)98100-5441</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/vinicius-neves-784099169/">Meu perfil</a></p>
         </div>
-
     </footer>
     <div id="topo">
         <a href="#menu">
         <img src="../img/seta-cima.png" alt="Seta para cima" title="Voltar ao topo"></a>
     </div>
     </div>  
-    <script src="../JS/index.js"></script>     
+    <script src="../JS/index.js"></script> 
+    <script src="../JS/projetos.js"></script>    
 </body>
 </html>
