--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/main.css
     ">
     
@@ -28,8 +29,14 @@
                         <div id="text">
                             <h1>Vinicius Mota Neves</h1> 
                             <h2>Estudante de Redes de Computadores</h2>
-                        </div>  
+                        </div>
                     </div>
+                    <div id="h-mid">
+                        <a href="https://github.com/MotaVinicius" target="_blank">
+                            <button class="bt git">GitHub <i class="fa-brands fa-github"></i></button></a>
+                            <a href="https://www.linkedin.com/in/vinicius-neves-784099169/" target="_blank">
+                            <button class="bt linked">LinkedIn <i class="fa-brands fa-linkedin"></i></button></a>
+                        </div>  
                     <div id="h-bottom">
                         <img src="../img/online-page-animate9.svg" alt="Animation" id="animation">
                     </div>    
@@ -40,7 +47,6 @@
                 <div id="Sobremim">
                     <h2>Sobre Mim</h2>
                     <p>Olá, me chamo Vinicius, tenho 25 anos, sou estudante de Redes de computadores, deixei a area de administração de empresas para entrar no universo da tecnologia a 4 anos e logo abaixo vocês poderão ver um pouco mais de como esta sendo minha tragetória</p>
-                
                 </div>
                 <div id="eventos">
                     <div id="one">
@@ -53,7 +59,7 @@
                         <p>Trabalhos Freelancer com formatação, montagem e manutenção de computadores</p>
                     </div>
                     <div id="eight">
-                        <p><b>Ingresso na faculdade de Redes de computadores</b>, certificação azure, curso IT cisco</p>
+                        <p><b>Ingresso na faculdade de Redes de computadores</b>, certificação azure(cloud), curso IT cisco</p>
                     </div>
                     <div id="nine">
                         <p>Cursos de SQL, Python, GIT e desenvolvimento Web (JS, CSS, HTML, React)</p>
