--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/main.css
     ">
     
-    <title>Document</title>
+    <title>Vinicius Mota - Portifólio</title>
 </head>
 <body>
     <div id="container">
@@ -53,7 +53,7 @@
                         <p><br> Administração</p>
                     </div>
                     <div id="five">
-                        <p>Inicio dos estudos voltados a hardware por conta própria</p>
+                        <p>Inicio dos estudos voltados a hardware</p>
                     </div>
                     <div id="six">
                         <p>Trabalhos Freelancer com formatação, montagem e manutenção de computadores</p>
@@ -146,21 +146,13 @@
                             <small>CSS</small>
                         </div>
                         <div class="logo">
-                            <div class="empty">+</div>
+                            <div class="empty"></div>
                             <small>Em breve</small>
                         </div>
                         <div class="logo">
-                            <div class="empty">+</div>
+                            <div class="empty"></div>
                             <small>Em breve</small>
-                        </div>
-                        <!--<img src="../i
-                            </div>mg/angular.png" title="Angular">-->
-                        <!--<div class="logo">
-                            <img src="../img/pytorch.png" title="Pytorch">
-                            <small>PyTorch</small>
-                        </div>-->
-                        <!--<img src="../img/react0.jpg" title="React">-->              
-
+                        </div>  
                     </div>
                 </div>
                 <div class="secondbox">
@@ -177,23 +169,23 @@
                         <small>Tensorflow</small>
                     </div>
                     <div class="logo">
-                        <div class="empty">+</div>
+                        <div class="empty"></div>
                         <small>Em breve</small>
                     </div>
                     <div class="logo">
-                        <div class="empty">+</div>
+                        <div class="empty"></div>
                         <small>Em breve</small>
                     </div>
                     <div class="logo">
-                        <div class="empty">+</div>
+                        <div class="empty"></div>
                         <small>Em breve</small>
                     </div>
                     <div class="logo">
-                        <div class="empty">+</div>
+                        <div class="empty"></div>
                         <small>Em breve</small>
                     </div>
                     <div class="logo">
-                        <div class="empty">+</div>
+                        <div class="empty"></div>
                         <small>Em breve</small>
                     </div>
                 </div>    
@@ -289,8 +281,8 @@
         <div id="contato">
             <h4>Contato</h4>
             <p>Email: Motavinicius@outlook.com</p>
-            <p>WhatsApp: (19)98100-5441</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/vinicius-neves-784099169/">Meu perfil</a></p>
+            <p></a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/vinicius-neves-784099169/" target="_blank">Meu perfil</a></p>
         </div>
     </footer>
     <div id="topo">
