--- a/html/FormValidator.html
+++ b/html/FormValidator.html
@@ -54,6 +54,25 @@
         }
         #nome-field input{
             margin-right: 1vw;
+            width: 15rem;
+        }
+        #row-field input{
+            width: 8rem;
+        }
+        #row-field2 select{
+            width: 8rem;
+        }
+        #nacionalidade-field input{
+            width: 12rem;
+        }
+        #fields-contato input{
+            width: 12rem;
+        }
+        #fields-endereco1{
+            width: 12rem;
+        }
+        #fields-endereco2 input{
+            width: 11rem;
         }
         #row-field{
             display: flex;
@@ -89,7 +108,6 @@
             justify-content:space-between;
         }
         input, select{
-            width:fit-content;
             height: 3.5vh;
             border-radius: 0.2vw;
             border: 2px solid #e6e6e6e6;
@@ -144,9 +162,12 @@
             color: white;
             border: 2px solid #19518acc;
         }
-        #span1,  #span2,  #span3,  #span4, #span5{
+        #span1,  #span2,  #span3,  #span4, #span5, #span6{
             height: 2vh;
             display: none;
+        }
+        #span6{
+            margin-left: 17rem;
         }
         .span{
             font-size: 0.6vw;
@@ -182,6 +203,9 @@
                     <input type="text" id="nome2" placeholder="Sobrenome" required>
                 <div id="span1">
                     <span class="span">Nome deve ter no minimo 3 caracteres</span>
+                </div>
+                <div id="span6">
+                    <span class="span">Sobrenome  deve ter no minimo 3 caracteres</span>
                 </div>
                 </div>
                 <div id="row-field">
