--- a/html/index.html
+++ b/html/index.html
@@ -157,20 +157,20 @@
                 </div>
                 <div class="secondbox">
                 <div class="label">
-                    <h3>Frameworks:</h3>
+                    <h3>Tecnologias:</h3>
                 </div>
                 <div id="icons">
                     <div class="logo">
-                        <img src="../img/bootstrap.png" title="Bootstrap">
+                        <img src="../img/bootstrap.png" title="Bootstrap"  alt="Bootstrap" >
                         <small>Bootstrap</small>
                     </div>
                     <div class="logo">
-                        <img src="../img/tensorflow.png" title="Tensorflow">
+                        <img src="../img/tensorflow.png" title="Tensorflow" alt="TensorFlow" >
                         <small>Tensorflow</small>
                     </div>
                     <div class="logo">
-                        <div class="empty"></div>
-                        <small>Em breve</small>
+                        <img src="../img/Azure0.png" alt="Azure" title="Azure">
+                        <small>Azure</small>
                     </div>
                     <div class="logo">
                         <div class="empty"></div>
@@ -196,7 +196,7 @@
             <div id="container-slider">
                 <div class="container-slider">
                     <div id="header-slider">
-                        <h2>Navegue pelos projetos</h2>
+                        <h2>Projetos</h2>
                     </div>
                     <div id="bottom-slider">
                         <button id="prev-bt"><img src="../img/left.png" alt="prev-button" title="Anterior"></button>
