--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,16 @@
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
+        <button class="menu-bar" onclick="menuMobile()"><i class="fa-solid fa-bars"></i></button>
+        <nav class="menu-mobile off">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#mid-header">Sobre mim</a></li>
+                <li><a href="#boxes">Conhecimentos</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
         <div id="main">
             <div id="overlay">
                 <div id="head">
@@ -35,7 +45,7 @@
                         <a href="https://github.com/MotaVinicius" target="_blank">
                             <button class="bt git">GitHub <i class="fa-brands fa-github"></i></button></a>
                             <a href="https://www.linkedin.com/in/vinicius-neves-784099169/" target="_blank">
-                            <button class="bt linked">LinkedIn <i class="fa-brands fa-linkedin"></i></button></a>
+                            <button class="bt linked">LinkedIn<i class="fa-brands fa-linkedin"></i></button></a>
                         </div>  
                     <div id="h-bottom">
                         <img src="../img/online-page-animate9.svg" alt="Animation" id="animation">
@@ -118,14 +128,6 @@
                     </div>
                     <div id="icons">
                         <div class="logo">
-                            <img src="../img/mysql.jpg" title="SQL">
-                            <small>SQL</small>
-                        </div>
-                        <div class="logo">
-                            <img src="../img/git.png" title="Git">
-                            <small>Git</small>
-                        </div>
-                        <div class="logo">
                             <img src="../img/python0.png" title="Python">
                             <small>Python</small>
                         </div>
@@ -145,6 +147,14 @@
                             <img src="../img/css.png" title="CSS">
                             <small>CSS</small>
                         </div>
+                        <div class="logo rsp">
+                            <div class="empty"></div>
+                            <small>Em breve</small>
+                        </div>
+                        <div class="logo rsp">
+                            <div class="empty"></div>
+                            <small>Em breve</small>
+                        </div>
                         <div class="logo">
                             <div class="empty"></div>
                             <small>Em breve</small>
@@ -161,6 +171,14 @@
                 </div>
                 <div id="icons">
                     <div class="logo">
+                        <img src="../img/mysql.jpg" title="SQL">
+                        <small>SQL</small>
+                    </div>
+                    <div class="logo">
+                        <img src="../img/git.png" title="Git">
+                        <small>Git</small>
+                    </div>
+                    <div class="logo">
                         <img src="../img/bootstrap.png" title="Bootstrap"  alt="Bootstrap" >
                         <small>Bootstrap</small>
                     </div>
@@ -171,14 +189,6 @@
                     <div class="logo">
                         <img src="../img/Azure0.png" alt="Azure" title="Azure">
                         <small>Azure</small>
-                    </div>
-                    <div class="logo">
-                        <div class="empty"></div>
-                        <small>Em breve</small>
-                    </div>
-                    <div class="logo">
-                        <div class="empty"></div>
-                        <small>Em breve</small>
                     </div>
                     <div class="logo">
                         <div class="empty"></div>
@@ -286,7 +296,7 @@
         </div>
     </footer>
     <div id="topo">
-        <a href="#menu">
+        <a href="#container">
         <img src="../img/seta-cima.png" alt="Seta para cima" title="Voltar ao topo"></a>
     </div>
     </div>  
