--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@
                         <a href="https://github.com/MotaVinicius" target="_blank">
                             <button class="bt git">GitHub <i class="fa-brands fa-github"></i></button></a>
                             <a href="https://www.linkedin.com/in/vinicius-neves-784099169/" target="_blank">
-                            <button class="bt linked">LinkedIn<i class="fa-brands fa-linkedin"></i></button></a>
+                            <button class="bt linked">LinkedIn <i class="fa-brands fa-linkedin"></i></button></a>
                         </div>  
                     <div id="h-bottom">
                         <img src="../img/online-page-animate9.svg" alt="Animation" id="animation">
@@ -56,63 +56,23 @@
             <div id="container-mid">
                 <div id="Sobremim">
                     <h2>Sobre Mim</h2>
-                    <p>Olá, me chamo Vinicius, tenho 25 anos, sou estudante de Redes de computadores, deixei a area de administração de empresas para entrar no universo da tecnologia a 4 anos e logo abaixo vocês poderão ver um pouco mais de como esta sendo minha tragetória</p>
+                    <p>Olá, me chamo Vinicius, tenho 26 anos, sou estudante de Redes de computadores, deixei a area de administração de empresas para entrar no universo da tecnologia a 4 anos. Abaixo você conseguira ver um pouco dos meus conhecimentos em diferentes vertentes da area de Tecnologia.</p>
                 </div>
-                <div id="eventos">
-                    <div id="one">
-                        <p><br> Administração</p>
+                <div class="vertentes">
+                    <div class="item hardware">
+                        <h2>Hardware</h2>
+                        <p>Autodidata</p>
+                        <p>Experiencia com montagem, manutenção e formatação de computadores através de trabalhos freelancer</p>
                     </div>
-                    <div id="five">
-                        <p>Inicio dos estudos voltados a hardware</p>
+                    <div class="item desenvolvimento">
+                        <h2>Desenvolvimento</h2>
+                        <p>Conhecimetos em desevolvimento Web (HTML, CSS, JavaScript)</p>
+                        <p>Conhecimentos em analise de dados (Python, Pandas, Numpy, TensorFlow, SQL)</p>
                     </div>
-                    <div id="six">
-                        <p>Trabalhos Freelancer com formatação, montagem e manutenção de computadores</p>
-                    </div>
-                    <div id="eight">
-                        <p><b>Ingresso na faculdade de Redes de computadores</b>, certificação azure(cloud), curso IT cisco</p>
-                    </div>
-                    <div id="nine">
-                        <p>Cursos de SQL, Python, GIT e desenvolvimento Web (JS, CSS, HTML, React)</p>
-                    </div>
-                </div>
-                <div id="linha">
-                    <div id="adm">
-                        <div class="ponto-1"> 
-                            <div class="legenda">2015</div>
-                        </div>
-                        <div class="ponto-2">
-                            <div class="legenda">2016</div>
-                        </div>
-                        <div class="ponto-3">
-                            <div class="legenda">2017</div>
-                        </div>
-                        <div class="ponto-4">
-                            <div class="legenda">2018</div>
-                        </div>
-                        <div class="ponto-5">
-                            <div class="legenda">2019</div>
-                        </div>
-                    </div>
-                    <div id="ti">
-                        <div class="ponto"> 
-                            <div class="legenda"></div>
-                        </div>
-                        <div class="ponto-2">
-                            <div class="legenda">2020</div>
-                        </div>
-                        <div class="ponto-3">
-                            <div class="legenda">2021</div>
-                        </div>
-                        <div class="ponto-4">
-                            <div class="legenda">2022</div>
-                        </div>
-                        <div class="ponto-5">
-                            <div class="legenda">2023</div>
-                        </div> 
-                        <div class="ponto-5">
-                            <div class="legenda">06/2023</div>
-                        </div>                
-                        
+                    <div class="item cloud">
+                        <h2>Cloud</h2>
+                        <p>Certificação Azure AZ-900</p>
+                        <p>Conhecimetos em AWS</p>
                     </div>
                 </div>
             </div>
