--- a/html/index.html
+++ b/html/index.html
@@ -56,9 +56,17 @@
             <div id="container-mid">
                 <div id="Sobremim">
                     <h2>Sobre Mim</h2>
-                    <p>Olá, me chamo Vinicius, tenho 26 anos, sou estudante de Redes de computadores, deixei a area de administração de empresas para entrar no universo da tecnologia a 4 anos. Abaixo você conseguira ver um pouco dos meus conhecimentos em diferentes vertentes da area de Tecnologia.</p>
+                    <p>Olá, me chamo Vinicius, tenho 26 anos, sou estudante de Redes de computadores, deixei a area de administração de empresas para entrar no universo da tecnologia a 4 anos. Abaixo você conseguira ver minhas principais soft-skills e um pouco dos meus conhecimentos em diferentes vertentes da area de Tecnologia.</p>
                 </div>
                 <div class="vertentes">
+                    <div class="item soft-skills">
+                        <h2>Soft Skills</h2>
+                        <p>Disciplina</p>
+                        <p>Gerenciamento de Tempo</p>
+                        <p>Facilidade de aprendizagem</p>
+                        <p>Raciocinio lógico</p>
+                        <p>Proatividade</p>
+                    </div>
                     <div class="item hardware">
                         <h2>Hardware</h2>
                         <p>Autodidata</p>
@@ -79,7 +87,7 @@
         </div>    
         <div id="mid-bottom">
             <div id="conhecimentos">
-                <div id="conhecimentostext">Conhecimentos e habilidades</div>
+                <div id="conhecimentostext">Tecnologias</div>
             </div>
             <div id="boxes">
                 <div class="box">
