--- a/html/index.html
+++ b/html/index.html
@@ -180,13 +180,13 @@
                         <button id="prev-bt"><img src="../img/left.png" alt="prev-button" title="Anterior"></button>
                         <div class="carrossel">
                             <div class="slider on">
-                                <a href="https://www.google.com.br/" target="_blank"><img src="../img/Captura.png" alt="Em Breve"></a>
+                                <img src="../img/LoginPage.png" alt="Em Breve">
                                 <div class="describe">
-                                    <h3>Blog de Tecnologia</h3>
-                                    <p>Projeto academico desenvolvido em html, css e js</p>
+                                    <h3>LoginPage</h3>
+                                    <p>Página de login e de recuperação de senha com validações feito em CSS e JavaScript</p>
                                     <div class="btns">
-                                        <button class="link">Repositório</button>
-                                        <button class="link">Visualizar</button>
+                                        <a href="https://github.com/MotaVinicius/LoginPage" target="_blank"><button class="link">Repositório</button></a>
+                                        <a href="../Projetos/LoginPage/index.html" target="_blank"><button class="link">Visualizar</button></a>
                                     </div>
                                 </div>
                             </div>
