project login lastVersion

--- a/Projetos/LoginPage/senha.html
+++ b/Projetos/LoginPage/senha.html
@@ -22,6 +22,35 @@
             justify-content: center;
             align-items: center;
         }
+        @media screen and (max-width: 768px){
+            #title h1{
+                font-size: 3vw;
+                width: 40vw;
+            }
+            .back i{
+                font-size: 4vw;
+            }
+            .botao button{
+            padding: .7vh 7.95vw;
+            border-radius: .5vw;
+            font-size: 2.2vw;
+            }
+        }
+        @media screen and (max-width: 768px){
+            #title h1{
+                font-size: 5vw;
+                width: 50vw;
+            }
+            .back i{
+                font-size: 6vw;
+            }
+            .botao button{
+            padding: .7vh 12.5vw;
+            border-radius: .5vw;
+            font-size: 3.5vw;
+            }
+        }
+        
     </style>
 </head>
 <body>
