att legenda projetos

--- a/html/index.html
+++ b/html/index.html
@@ -176,6 +176,9 @@
                     <div id="header-slider">
                         <h2>Projetos</h2>
                     </div>
+                    <div id="mid-legenda">
+                        <h4>Projetos Pessoais</h4>
+                    </div>
                     <div id="bottom-slider">
                         <button id="prev-bt"><img src="../img/left.png" alt="prev-button" title="Anterior"></button>
                         <div class="carrossel">
@@ -183,7 +186,7 @@
                                 <img src="../img/LoginPage.png" alt="Em Breve">
                                 <div class="describe">
                                     <h3>LoginPage</h3>
-                                    <p>Página de login e de recuperação de senha com validações feito em CSS e JavaScript</p>
+                                    <p>Página de login e de recuperação de senha com validações feito em CSS e JavaScript (Responsivo)</p>
                                     <div class="btns">
                                         <a href="https://github.com/MotaVinicius/LoginPage" target="_blank"><button class="link">Repositório</button></a>
                                         <a href="../Projetos/LoginPage/index.html" target="_blank"><button class="link">Visualizar</button></a>
